<resources>
    <string name="app_name">Car Advisor</string>
    <string name="Open" translatable="false">Licenta</string>
    <string name="Close" translatable="false">Licenta</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_username">Enter Username</string>
    <string name="error_message_age">Enter age</string>
    <string name="error_message_email">Enter Valid E-mail</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">E-mail Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong E-mail or Password</string>
    <string name="nume">First Name</string>
    <string name="prenume">Last Name</string>
    <string name="varsta">Age</string>
    <string name="parola">Password</string>
    <string name="username" translatable="false">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="reg">Register</string>
    <string name="log">Login</string>
    <string name="mesLogin">No account yet? Create one.</string>
    <string name="mesRegister">Already a member? Login.</string>
    <string name="confParola">Confirm you password</string>
    <string name="faraCont">Continue without account</string>
    <string name="schimbaParola">Forgot password?</string>
    <string name="remember">Remember me</string>
    <string-array name="intrebari">
        <item>Do you want to make the purchase for an individual or a company?</item>
        <item>What is the predominant use of the car?</item>
        <item>Do you have children?</item>
        <item>Will the car also be used for holidays or hiking?</item>
        <item>Sex:</item>
        <item>What is your driving experience?</item>
        <item>Will the car be the main or secondary car?</item>
    </string-array>
    <string-array name="firma">
        <item>company</item>
        <item>individual</item>
    </string-array>
    <string-array name="utilizare">
        <item>urban</item>
        <item>extra-urban</item>
        <item>mixed</item>
    </string-array>
    <string-array name="copii">
        <item>without</item>
        <item>2 children</item>
        <item>more</item>
    </string-array>
    <string-array name="concediu">
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="sex">
        <item>feminine</item>
        <item>masculine</item>
    </string-array>
    <string-array name="experienta">
        <item>beginner</item>
        <item>medium</item>
        <item>advanced</item>
    </string-array>
    <string-array name="principala">
        <item>main</item>
        <item>secondary</item>
    </string-array>
    <string name="intrebare1Masina">Choose the body car for which you want to know the models:</string>
    <string-array name="intrebariMasini">
        <item>What is your budget?</item>
        <item>What type of fuel do you prefer?</item>
    </string-array>
    <string-array name="bugetAchizitie">
        <item>less than 5000€</item>
        <item>between 5000€ and 10000€</item>
        <item>more than 10000€</item>
        <item>new</item>
    </string-array>
    <string-array name="combustibil">
        <item>benzine</item>
        <item>diesel</item>
        <item>electric</item>
        <item>hybrid</item>
    </string-array>
    <string name="compareTxt">Compare the body cars</string>
    <string name="home">Home</string>
    <string name="descriereTxt">The description of the body cars</string>
    <string name="masinaTxt">Car suggestions</string>
    <string name="caroserieTxt">Find out what body cars suit you</string>
    <string name="descriereMarca">The description of the brands</string>
    <string name="desc1">Short description</string>
    <string name="desc2">Pro arguments</string>
    <string name="desc3">Arguments against</string>
    <string name="acc">Account details</string>
    <string name="schimba">Change password</string>
    <string name="standardEmail" translatable="false">anonim@gmail.com</string>
    <string name="txtSchimba">Change</string>
    <string name="txtConfirma">Confirm new password</string>
    <string name="txtParola">New Password</string>
    <string name="txtParolaNoua">Enter the new password</string>
    <string name="txtParolaInitiala">Old Password</string>
    <string name="primaCaroserie">The first body car</string>
    <string name="adouaCaroserie">The second body car</string>
    <string name="compara">Compare</string>
    <string name="titlu">Choose two body cars</string>
    <string name="after">Do you want to know other details besides the body car?</string>
    <string name="afla">Find out more</string>
    <string name="procente">Your percentages are:</string>
    <string name="statistici">My statistics</string>
    <string name="statisticiGenerale">General statistics</string>
    <string name="help">Help</string>
    <string name="helpTitle">How can we help you?</string>
    <string name="helpAccount">How do I change my account data?</string>
    <string name="helpPassword">How do I change my password?</string>
    <string name="helpNewAccount">How do I create an account?</string>
    <string name="helpDescriere">Help with the description options</string>
    <string name="helpFiltrare">Help with the filtering options</string>
    <string name="helpComparare">Help with the comparison option</string>
    <string name="forgotPass">I forgot my password, what should I do?</string>
    <string-array name="accountHelpDescription">
        <item>1. In any interface you are in, click on the icon on the top left.</item>
        <item>2. Click on the icon with the text: account details.</item>
        <item>3. Click on the pencil icon for data changes.</item>
    </string-array>
    <string-array name="passwordHelpDescription">
        <item>1. In any interface you are in, click on the icon on the top left.</item>
        <item>2. Click on the icon with the text: account details.</item>
        <item>3. Click on the text: \"Change password\".</item>
        <item>4. Fill in the blanks and click on \"Change password\".</item>
    </string-array>
    <string-array name="createAccountHelp">
        <item>1. In the login page click on the text: \"No account yet? Create one.\"</item>
        <item>2. In the registration page, fill in the fields and click on the \"Register\" button.</item>
    </string-array>
    <string-array name="fpassHelp">
        <item>1. Go to the login page.</item>
        <item>2. Click on \"Forgot password?\".</item>
    </string-array>
    <string-array name="descHelp">
        <item>1. You have 2 description options, you can identify them by this icon:</item>
        <item>2. If you click on one of the description options, you will be redirected to a page that contains a list of the brands or the body cars.</item>
    </string-array>
    <string-array name="filterHelp">
        <item>1. You have 2 filtering options, which can be identified by this icon:</item>
        <item>2. If you click on one of them, you will be redirected to a page that contains a quiz to filter the cars or the body cars.</item>
    </string-array>
    <string-array name="compareHelp">
        <item>1. The comparison option can be identified by this icon:</item>
        <item>2. When you click on it, you will be redirected to a page that will tell you to choose the 2 body cars you want to compare.</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="myCars">My cars</string>
    <string name="txtEnumerareCaroserii">These are the body cars from which it would be advisable to choose:</string>
    <string name="caroserieDetalii">Body car</string>
    <string name="marcaDetalii">Brand</string>
    <string name="anulDetalii">Year</string>
    <string name="caiPutereDetalii">Horse power</string>
    <string name="capCilindricaDetalii">Cilindrical capacity</string>
    <string name="alimentareaDetalii">Combustible</string>
    <string name="intervalPretDetalii">Price range</string>
    <string name="saveDetalii">Save this car</string>
    <string name="deleteDetalii">Remove this car</string>
    <string name="modeleTxt">Saved models</string>
    <string name="chartPopularitate">Body car popularity</string>
    <string name="chartComparatie">Body  cars percentages</string>
    <string name="glume">Jokes</string>
    <string name="awesome">Awesome!</string>
    <string name="nice">Okay</string>
    <string name="horrible">So and so</string>
</resources>