<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:background="@color/Color1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/white"
                    android:text="@string/mesRegister"
                    android:layout_alignParentLeft="true" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_login_hero" />
            </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/red"
                android:textSize="18dp"
                android:layout_marginStart="10dp"
                android:id="@+id/output"/>
        <EditText
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:hint="Email"
            android:textColorHint="@color/Color"
            android:textColor="@color/Color"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:id="@+id/txtEmail"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEmail"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/red"
                android:layout_marginStart="10dp"
                android:id="@+id/output1"/>
        <EditText
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:textColor="@color/Color"
            android:textColorHint="@color/Color"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="20dp"
            android:id="@+id/txtParola"
            android:hint="@string/parola"
            android:inputType="textPassword"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="130dp"
            android:text="@string/remember"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:buttonTint="#FFFFFF"
            android:id="@+id/remember"/>

        <Button
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:backgroundTint="#0d6e6a"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_login"
            android:text="@string/log"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/mesLogin"
            android:id="@+id/txt_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:id="@+id/txt_without"
            android:text="@string/faraCont"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/schimbaParola"
            android:id="@+id/schimbaParola"/>
    </LinearLayout>
</ScrollView>