<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/Color1">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titlu"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:letterSpacing="0.03"
                android:text="@string/reg"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_login_hero" />
    </RelativeLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <EditText
            android:id="@+id/etNume"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:inputType="textPersonName"
            android:textColorHint="@color/Color"
            android:textColor="@color/Color"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:hint="@string/nume"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/outNume"
            android:textColor="@color/red"/>
        <EditText
            android:id="@+id/etPrenume"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:inputType="textPersonName"
            android:textColorHint="@color/Color"
            android:textColor="@color/Color"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:hint="@string/prenume"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/outPrenume"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"/>
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:inputType="textPersonName"
            android:hint="Username"
            android:textStyle="bold"
            android:textColorHint="@color/Color"
            android:textColor="@color/Color"
            android:paddingLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/outUsername"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:inputType="date"
        android:hint="@string/varsta"
        android:textStyle="bold"
        android:textColorHint="@color/Color"
        android:textColor="@color/Color"
        android:paddingLeft="20dp"
        android:id="@+id/age"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/outAge"
        android:layout_marginStart="10dp"
        android:textColor="@color/red"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/Color"
            android:textColor="@color/Color"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/outEmail"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"/>

        <EditText
            android:id="@+id/etParola"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:inputType="textPassword"
            android:textColorHint="@color/Color"
            android:textColor="@color/Color"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:hint="@string/parola"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/outParola"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"/>

        <EditText
            android:id="@+id/etConfirm"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:inputType="textPassword"
            android:textColorHint="@color/Color"
            android:textColor="@color/Color"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:hint="@string/confParola"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/outConfirm"
            android:textColor="@color/red"/>
</LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnReg"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:backgroundTint="@color/Color"
            android:text="@string/reg"/>

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:layout_alignParentLeft="true"
                    android:text="@string/mesRegister"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"/>

    </LinearLayout>
</ScrollView>