<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/dl">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/square"
                    android:layout_alignParentTop="true"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:textColor="@color/white"
                            android:id="@+id/home"
                            android:text="@string/glume"/>
                        <ImageView
                            android:layout_alignParentRight="true"
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/laugh"/>
                    </RelativeLayout>
                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnOrderPreserved="true"
                        android:alignmentMode="alignMargins"
                        android:rowCount="5"
                        android:columnCount="2"
                        android:layout_marginTop="40dp"
                        >
                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight="1"
                            app:cardElevation="6dp"
                            app:cardCornerRadius="12dp"
                            android:layout_margin="12dp"
                            android:id="@+id/descriere">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:gravity="center"
                                android:padding="10dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="18sp"
                                    android:textColor="@color/black"
                                    android:layout_marginTop="12dp"
                                    android:id="@+id/descriereTxt"
                                    android:textStyle="italic"
                                    android:textAlignment="center"/>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </GridLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:id="@+id/linButton">

                        <Button
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="70dp"
                            android:text="@string/awesome"
                            app:backgroundTint="#D8C411"
                            android:id="@+id/awesome"/>
                        <Button
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="95dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/nice"
                            android:id="@+id/nice"/>

                        <Button
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="130dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/horrible"
                            app:backgroundTint="#BC0A0A"
                            android:id="@+id/horrible"/>
                        <pl.droidsonroids.gif.GifImageView
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="80dp"
                            android:id="@+id/gif"
                            />
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"/>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_navigation"
            android:background="?android:attr/windowBackground"
            android:layout_gravity="bottom"
            android:id="@+id/bottomNav"
            />
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        />
</androidx.drawerlayout.widget.DrawerLayout>